yamlsKubernetes/k8s-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: miproyecto.duckdns.org  # Aquí pones el subdominio que creaste
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-java-app-service
            port:
              number: 8080
